<resources>
    <string name="app_name">LookUpPet</string>
    <string name="action_settings">Settings</string>
    <string name="boton_iniciarSesion">Iniciar Sesion</string>
    <string name="boton_registrar">Registrar</string>
    <string name="boton_registrarse">Registrarme</string>
    <string name="title_activity_inicio_sesion">InicioSesion</string>
    <string name="hint_nombreUser">Nombre de Usuario</string>
    <string name="hint_contra">Contraseña</string>
    <string name="hint_nombreReal">Nombre real</string>
    <string name="hint_correo">Correo</string>
    <string name="boton_iniciar">Iniciar Sesion</string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_base_navi_d">BaseNaviD</string>
    <string name="abierto">Menu Abierto</string>
    <string name="cerrado">Menu Cerrado</string>
    <string name="publicar_adopcion">Publicar adopción</string>
    <string name="publicar_perdida">Publicar perdida</string>
    <string name="hint_correoContacto">Correo Contacto</string>
    <string name="hint_descripcionEditarPerfil">Acerca de ti</string>
    <string name="hint_telefonoContacto">Telefono Contacto</string>
    <string name="hint_descripcionPublicacion">Descripcion de la publicacion</string>
    <string name="boton_publicar">Publicar</string>
    <string name="desde_galeria">Subir desde Galería</string>
    <string name="tomar_foto">Tomar Fotografía</string>
    <string name="tv_titulo_descripcion">Descripción</string>
    <string name="action_editar">Editar Perfil</string>
    <string name="botonEditar">Editar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_publicacion">Publicacion</string>
    <string name="title_activity_ver_publicacion">VerPublicacion</string>
    <string name="title_activity_publicacion_adopcion">PublicacionAdopcion</string>
    <string name="title_activity_ver_publicacion_adopcion">VerPublicacionAdopcion</string>
    <string name="title_activity_perfil_usuario">PerfilUsuario</string>
    <string name="title_activity_editar_perfil">EditarPerfil</string>
</resources>
