<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Views.Registro"
    tools:showIn="@layout/activity_registro">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etNombreReal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:hint="@string/hint_nombreReal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etNombreUsuario"
        android:layout_below="@+id/etNombreReal"
        android:layout_alignRight="@+id/etNombreReal"
        android:layout_alignEnd="@+id/etNombreReal"
        android:layout_marginTop="45dp"
        android:hint="@string/hint_nombreUser" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etCorreo"
        android:layout_below="@+id/etNombreUsuario"
        android:layout_alignLeft="@+id/etNombreUsuario"
        android:layout_alignStart="@+id/etNombreUsuario"
        android:layout_marginTop="45dp"
        android:hint="@string/hint_correo" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etContra"
        android:layout_alignRight="@+id/etCorreo"
        android:layout_alignEnd="@+id/etCorreo"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/etCorreo"
        android:hint="@string/hint_contra" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_registrarse"
        android:id="@+id/button"
        android:layout_below="@+id/etContra"
        android:layout_alignRight="@+id/etContra"
        android:layout_alignEnd="@+id/etContra"
        android:layout_marginTop="45dp"
        android:layout_alignLeft="@+id/etContra"
        android:layout_alignStart="@+id/etContra"
        android:onClick="registrarmeOnClick" />

</RelativeLayout>
