<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/pantallaCompletaEditar"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.abraham.lookuppet.Views.EditarPerfil"
    tools:showIn="@layout/activity_editar_perfil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        android:id="@+id/fotoPerfilEditar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bordeFoto"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="#e2dfdf">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageViewFotoPerfilEditar"
                android:layout_margin="3dp"
                android:background="#f9f9f9"
                android:src="@drawable/no_avatar"/>

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:id="@+id/DatosEditarPerfil">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/Nombres"
            android:orientation="vertical">

            <EditText
                android:layout_width="240dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/etNombreRealEditar"
                android:hint="@string/hint_nombreReal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"/>

            <EditText
                android:layout_width="240dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/etNombreUserEditar"
                android:hint="@string/hint_nombreUser"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/etNombreRealEditar"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:id="@+id/descripcioBotonEditar">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:id="@+id/etDescripcionEditar"
                android:hint="@string/hint_descripcionEditarPerfil"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/etNombreUserEditar"
                android:background="@android:drawable/edit_text"
                android:textColor="@android:color/primary_text_light"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/botonEditar"
                android:text="@string/botonEditar"
                android:onClick="editarOnClick" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
