<?xml version="1.0" encoding="utf-8"?>
<LinearLayoutt xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Views.PublicacionPerdida"
    android:orientation="vertical"
    tools:showIn="@layout/activity_publicacion_perdida">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/imagenes"
        android:background="#d6d2d2"
        android:layout_weight="1.4">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:id="@+id/imagen1"
            android:src="@drawable/ic_image_camera_alt"
            android:background="#ffffff" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:id="@+id/imagen2"
            android:src="@drawable/ic_image_camera_alt"
            android:background="#ffffff" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/imagen3"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:src="@drawable/ic_image_camera_alt"
            android:background="#ffffff" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/imagenes"
        android:orientation="vertical"
        android:layout_weight="1"
        android:id="@+id/datos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/imagenes"
        android:orientation="horizontal"
        android:id="@+id/datos1"
        android:layout_weight="1">

        <Spinner
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_below="@id/datos"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/spinnerTipo"
            android:layout_weight="1"/>

        <Spinner
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_below="@id/spinnerTipo"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/spinnerComuna"
            android:layout_weight="1"
             />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:id="@+id/datos2"
            android:layout_below="@+id/datos1">

        <EditText
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_below="@id/datos"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/etCorreoContacto"
            android:layout_weight="1"
            android:hint="@string/hint_correoContacto" />

            <EditText
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_below="@id/datos"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/etTelefonoContacto"
                android:layout_weight="1"
                android:hint="@string/hint_telefonoContacto"
                android:inputType="number" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="150dp"
        android:layout_below="@+id/datos"
        android:layout_weight="1"
        android:id="@+id/descripcion">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/etDescripcion"
            android:layout_weight="3"
            android:hint="@string/hint_descripcionPublicacion"
            android:background="@android:drawable/edit_text"
            android:textColor="@android:color/primary_text_light"
            android:textAlignment="textStart"
            android:layout_gravity="start"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:id="@+id/botonPublicar"
            android:text="@string/boton_publicar"
            android:onClick="publicarOnClick" />
    </LinearLayout>

</LinearLayoutt>
